security/service-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-service-account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-service-account
  template:
    metadata:
      labels:
        app:  deployment-service-account
    spec:
      serviceAccount: service-account
      containers:
      - name:  service-account
        image:  nginx
        resources: {}
        ports:
        - containerPort:  80
          name:  http
      restartPolicy: Always
